--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -20,6 +20,8 @@
     "@strapi/plugin-users-permissions": "4.25.9",
     "@strapi/strapi": "4.25.9",
     "@swc/core": "^1.7.39",
+    "axios": "^1.7.7",
+    "nodemailer": "^6.9.15",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
