--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,8 +25,7 @@
     "sweetalert2": "^11.14.4",
     "yup": "^1.4.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0",
-    "sweetalert2": "^11.14.4"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
