--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,20 +15,26 @@
     "@types/yup": "^0.32.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
     "sweetalert2": "^11.14.4",
-    "yup": "^1.4.0",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/crypto-js": "^4.2.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
